--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "sinon": "^9.2.4"
   },
   "devDependencies": {
-    "mocha": "^8.2.1"
+    "mocha": "^8.3.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "mocha"
   },
   "repository": {
